@@ -25,7 +25,7 @@ import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 
 import javax.imageio.ImageIO;
-import javax.xml.bind.DatatypeConverter;
+import java.util.Base64;
 
 import de.jstacs.DataType;
 import de.jstacs.io.NonParsableException;
@@ -106,7 +106,8 @@ public class ImageResult extends Result {
 		} catch ( IOException e ) {
 			throw new RuntimeException( e.getMessage() );
 		}
-		XMLParser.appendObjectWithTags(xml, DatatypeConverter.printBase64Binary(baos.toByteArray()), "image");
+		//XMLParser.appendObjectWithTags(xml, DatatypeConverter.printBase64Binary(baos.toByteArray()), "image");
+		XMLParser.appendObjectWithTags(xml, Base64.getEncoder().encodeToString(baos.toByteArray()), "image");
 	}
 
 	/*
@@ -116,7 +117,8 @@ public class ImageResult extends Result {
 	@Override
 	protected void extractFurtherInfos( StringBuffer representation ) throws NonParsableException {
 		try {
-			byte[] bytearray = DatatypeConverter.parseBase64Binary( (String) XMLParser.extractObjectForTags( representation, "image" ) );
+			//byte[] bytearray = DatatypeConverter.parseBase64Binary( (String) XMLParser.extractObjectForTags( representation, "image" ) );
+			byte[] bytearray = Base64.getDecoder().decode( (String) XMLParser.extractObjectForTags( representation, "image" ) );
 			image = ImageIO.read( new ByteArrayInputStream( bytearray ) );
 		} catch (Exception e) {
 			throw new NonParsableException( e.getMessage() );
